--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
           />
         </div>
         <div>
-          <label for="formLastName">First name:</label>
+          <label for="formLastName">Last name:</label>
           <input
             tabindex="2"
             id="formLastName"
